src/components/Input/Inputt.scss
@import '../../globalStyles/globalVariabels.scss';


.input-container{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin: 0.3rem 0;
    span{
        // align-self: flex-start;
        // width: 30%;
        margin-left: -9rem;
        margin-bottom: 0.2rem;
        font-weight: bold;
        font-size: 0.7rem;
    }
    i{
        background: $grey-3;
        color: white;
        padding: 0.4rem 0.5rem;
        margin-right: 0;
        border-radius: $border-radius-md 0 0 $border-radius-md;
    }
    input{
        outline: none;
        padding-right: 0.4rem 0.5rem;
        font-weight: bold;
        height: 1.5rem;
        border-radius: 0 $border-radius-md $border-radius-md 0;
        border-width: 0;
        padding-left: 0.4rem;
        background: $grey-1;
    }
}

